     is that `$copy(new,old)` copies multi-value variables without
     flattening them.
   * Added special purpose TaggerScript variable `%_id3:%` for direct
     setting of ID3 frames. Currently it supports only TXXX frames in format
     `%_id3:TXXX:<description>%`, for example:
     `$copy(_id3:TXXX:PERFORMERSORTORDER,artistsort)`.
   * Support for WAV files. (#2537)
 * Bug Fixes:
   * Failed PUID submission deactivates the submit button. (#2673)
   * Unable to specify album art file name mask. (#2655)
   * Fixed incorrect copying of album metadata to tracks. (#2698)
   * Added options to un-hide toolbars. (#2631)
   * Fixed problem with saving extra performer FLAC tags
     containing non-ASCII characters. (#2719)
   * Read only the first date from ID3v2.3 tags. (#2460)
   * If the remembered directory for add dialogs and file browser was
     removed, try to find an existing directory in the same path.

Version 0.9.0alpha6 - 2007-04-04
 * New Features:
   * Added option --disable-autoupdate for 'build' and 'install' commands
     of the setup script. (#2551)
   * Automatically parse track numbers from file names like 01.flac for better
     cluster->album matching with untagged files.
   * Support for the new sorting tags in MP4 tags from iTunes 7.1.
   * Strip white-space from directory names. (#2558)
   * When replacing characters with their ascii equivalent, 'ß' should be
     replaced by 'ss'. (#2610)
   * Track level performer ARs. (#2561)
   * Remove leading and trailing whitespace from tags on file saving.
     (#892, #2665)
   * Support for labels, catalog numbers and barcodes.
 * Bug Fixes:
   * Artist names from ARs should be translated, too.
   * Freeze after answering no to "download the new version" prompt. (#2542)
   * %musicbrainz_albumid% not working in file renaming. (#2543)
   * Track time appears to display incorrectly if it's unknown on
     MusicBrainz. (#2548)
   * Fixed problem with removing albums/files after submitting PUIDs (#2556)